# rhyme-and-meter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  pyproject.toml
include/: CMU_Dict.h  Distance.h  Hirschberg.hpp  VowelHexGraph.h  consonant_distance.hpp  convenience.h  convenience.hpp  distance.hpp  levenshtein_distance.hpp  rhyme_and_meter.hpp  vowel_hex_graph.hpp  vowelhexgraph.hpp
src/: CMU_Dict.cpp  CMakeLists.txt  VowelHexGraph.cpp  consonant_distance.cpp  main.cpp  phonetic_calibration.cpp  rhyme_and_meter.cpp  rhymemeterpy.cpp  vowel_hex_graph.cpp
src/rhymemeter/: __init__.py
tests/: CMakeLists.txt  test.cpp  testCMU_Dict.cpp  testVowelHexGraph.cpp  test_consonant_distance.cpp  test_convenience.cpp  test_hirschberg.cpp  test_rhyme_and_meter.cpp  test_vowel_hex_graph.cpp  test_vowelhexgraph.cpp
