[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "rhymemeter"
version = "0.0.1"
description = "Python bindings to Peter Chinman's Rhyme and Meter library"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Nate Woods" },
    { name = "Peter Chinman" }
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://github.com/peterchinman/rhyme-and-meter"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
